samples/_failures_safe/1761223220_a2a9c3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ee65aa1.c: In function ‘main’:
./samples/SAFE/__tmp_7ee65aa1.c:158:28: error: expected ‘)’ at end of input
  158 |     if (!matrix_is_valid(&a
      |                         ~  ^
      |                            )
./samples/SAFE/__tmp_7ee65aa1.c:158:5: error: expected declaration or statement at end of input
  158 |     if (!matrix_is_valid(&a
      |     ^~
